--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="main">
     <section class="login">
       <div class="container">
-        <img src="static/images/logo.svg" alt="" width="32px">
+        <img class="logo" src="static/images/logo.svg" alt="" width="34px" height="40px">
         
         <input type="text" placeholder="Email or mobile number">
         <input type="text" placeholder="Enter your password">
