Design password-toggle button

--- a/index.html
+++ b/index.html
@@ -24,18 +24,19 @@
             <div class="error-message"></div>
           </div>
           <div class="form-input">
-            <div class="form-field">
-              <input type="password" placeholder="Enter your password">
+            <div class="form-field password">
+              <input type="password" id="password" placeholder="Enter your password">
               <label for="password" class="field-label">Enter your password</label>
+              <button type="button" class="password-toggle">Show</button>
             </div>
             <div class="error-message"></div>
           </div>
           
           <p>Forgot password</p>
           
-          <button class="btn-primary">Login</button>
+          <button type="submit" class="btn-primary">Login</button>
           <div class="divider">or</div>
-          <button class="btn-primary-outline">Sign Up</button>
+          <button type="button" class="btn-primary-outline">Sign Up</button>
 
         </form>
       </div>
