Toggle password field

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="form-field password">
               <input type="password" id="password" placeholder="Enter your password">
               <label for="password" class="field-label">Enter your password</label>
-              <button type="button" class="password-toggle">Show</button>
+              <button type="button" class="password-toggle hide" id="passwordToggler">Show</button>
             </div>
             <div class="error-message"></div>
           </div>
@@ -46,5 +46,8 @@
   <footer>
     <!-- Links -->
   </footer>
+
+  <script src="static/scripts/jquery.min.js"></script>
+  <script src="static/scripts/main.js"></script>
 </body>
 </html>
