Add login and sign up button

--- a/index.html
+++ b/index.html
@@ -32,11 +32,13 @@
             <div class="error-message"></div>
           </div>
           
-          <p>Forgot password</p>
+          <a class="forgot-password" href="https://www.paypal.com/authflow/password-recovery/">
+            Forgot password?
+          </a>
           
-          <button type="submit" class="btn-primary">Login</button>
+          <button type="button" class="button">Login</button>
           <div class="divider">or</div>
-          <button type="button" class="btn-primary-outline">Sign Up</button>
+          <button type="button" class="button secondary">Sign Up</button>
 
         </form>
       </div>
