Design or divider

--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
           </a>
           
           <button type="button" class="button">Login</button>
-          <div class="divider">or</div>
+          <div class="divider">
+            <span>or</span>
+          </div>
           <button type="button" class="button secondary">Sign Up</button>
 
         </form>
