Add otp login button

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
           </a>
           
           <button type="button" class="button">Login</button>
+          <button type="button" class="button secondary" id="otp">Log in with a one-time code</button>
           <div class="divider">
             <span>or</span>
           </div>
